--- a/views/account/editUpload.pug
+++ b/views/account/editUpload.pug
@@ -32,7 +32,7 @@ block content
             div(style="margin:0 auto;text-align:center;margin-bottom:15px;")
 
                 div.dropdown(style="display:inline;padding-right:15px;")
-                    button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
+                    button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border:none;")
                         | Category: &nbsp
                         span.caret
 
@@ -122,23 +122,23 @@ block content
 
                     div.form-group
                         .col-sm-offset-3.col-sm-4
-                            button.btn.btn.btn-primary(type='submit')
+                            button.btn.btn.btn-primary(type='submit' style="border:none;")
                                 i.fa.fa-pencil
-                                | Edit Upload
+                                | Save Edits
 
 
                 else
                     div.form-group
                         .col-sm-offset-3.col-sm-4
-                            button.btn.btn.btn-primary(type='submit')
+                            button.btn.btn.btn-primary(type='submit' style="border:none;")
                                 i.fa.fa-pencil
-                                | Edit Upload
+                                | Save Edits
             else
                 div.form-group
                     .col-sm-offset-3.col-sm-4
-                        button.btn.btn.btn-primary(type='submit')
+                        button.btn.btn.btn-primary(type='submit' style="border:none;")
                             i.fa.fa-pencil
-                            | Edit Upload
+                            | Save Edits
 
         br
         // DELETE FUNCTIONALITY
