--- a/views/account/forgot.pug
+++ b/views/account/forgot.pug
@@ -11,6 +11,6 @@ block content
           label.control-label(for='email') Email
           input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus, required)
         .form-group
-          button.btn.btn-primary(type='submit')
+          button.btn.btn-primary(type='submit' style="border:none;")
             i.fa.fa-key
             | Reset Password
