--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -16,7 +16,11 @@ block content
           input.fw.loginHeader.form-control(type='password', name='password', id='password', placeholder='Password', required)
       .form-group
         .col-sm-offset-3.col-sm-7
-          button.fw.loginHeader.col-sm-3.btn.btn-primary(type='submit' style="border-radius:8px;width:122px;")
+          p.fw Need an account?
+            a(href="/signup") &nbspSignup
+      .form-group
+        .col-sm-offset-3.col-sm-7
+          button.fw.loginHeader.col-sm-3.btn.btn-primary(type='submit' style="border:none;width:122px;")
             i.fw.loginHeader.fa.fa-user
             | Login
 
