--- a/views/account/reset.pug
+++ b/views/account/reset.pug
@@ -12,6 +12,6 @@ block content
         label(for='confirm') Confirm Password
         input.form-control(type='password', name='confirm', id='confirm', placeholder='Confirm password', required)
       .form-group
-        button.btn.btn-primary.btn-reset(type='submit')
+        button.btn.btn-primary.btn-reset(type='submit' style="border:none;")
           i.fa.fa-keyboard-o
           | Change Password
