--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -37,9 +37,11 @@ block content
         .col-sm-offset-3.col-sm-7
           p.fw By signing up you are agreeing you have read and agree to the
             a(href="/termsofservice") &nbspTerms Of Service
+          p.fw Already have an account?
+            a(href="/login") &nbspLogin
       .form-group
         .col-sm-offset-3.col-sm-7
-          button.fw.loginHeader.btn.btn-success(type='submit' style="border-radius:8px;width:133px;")
+          button.fw.loginHeader.btn.btn-success(type='submit' style="border:none;width:133px;")
             i.fa.fa-user-plus
             | Signup
 
