--- a/views/livestream/view.pug
+++ b/views/livestream/view.pug
@@ -25,7 +25,7 @@ block content
                 .col-md-12(style="margin-bottom:100px")
                     h2.userAmount Users In Room: 1
                     input.message-text(type='text', style='width:600px;margin-top:20px;')
-                    button.send-text Send Message
+                    button.send-text( style="border:none;") Send Message
                     .messages
                         h1 Messages:
                         ul.message-list
