--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -65,7 +65,7 @@ script.
     autoplay: autoplay,
     clickToPlay: true,
     speed: {selected: 1, options: [0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]},
-    controls: ['play-large', 'play','progress', 'current-time', 'duration', 'mute', 'volume', 'settings', 'fullscreen'],
+    controls: ['play-large', 'play','progress', 'current-time', 'duration', 'captions', 'airplay', 'pip', 'mute', 'volume', 'settings', 'fullscreen'],
     settings: ['speed', 'captions', 'quality', 'loop']
   };
 
