--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -8,25 +8,8 @@ footer
   .container.text-center
     p.pull-left © 2020 #{brandName} &nbsp
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://paypal.me/newtubeapp" target="_blank") PayPal
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/newtube_app" target="_blank") Twitter
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://www.facebook.com/NewTube-114869126871911" target="_blank") Facebook
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H" target="_blank") Discord
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube" target="_blank") GitHub
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#nodetube:matrix.org" target="_blank") Riot.im
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://fosstodon.org/@nodetube" target="_blank") Fosstodon
-
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
+    // a.pull-left(style="color:#aaa;margin-right:10px;" onclick="darkMode()") Dark Mode
 
-
-
-
+    // button(onclick="darkMode()") Toggle dark mode
