--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,9 @@
 style.
   .dropdown-anchors {
-    font-size: 12px;
-    font-weight: 500;
-    text-transform: uppercase;
-    transition: all 0.2s linear;
+    font-size: 12px !important;
+    font-weight: 500 !important;
+    text-transform: uppercase !important;
+    transition: all 0.2s linear !important;
     color: white !important;
     font-weight:500 !important;
   }
@@ -17,7 +17,33 @@ style.
     font-size:19px;
   }
 
-.navbar.navbar-default.navbar-fixed-top(style="background-color:rgb(24,55,147)")
+  /* Dark mode: */
+  .dark-mode {
+    background-color: #111 !important; //#1a1a1c; //rgba(11, 11, 12, 1); //#181817; //#292322; //rgb(40,44,52); rgb(33,37,43);
+    color: darkgray !important;
+  }
+
+  /* Light mode: */
+  .light-mode {
+    background-color: #fff !important; //#1a1a1c; //rgba(11, 11, 12, 1); //#181817; //#292322; //rgb(40,44,52); rgb(33,37,43);
+    color: black !important;
+  }
+
+  /* changes the dark mode button to look like a link*/
+  .link-button {
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    outline:none;
+    /*optional*/
+    /*font-family: arial, sans-serif;*/
+    /*input has OS specific font-family*/
+    /*color: #069;*/
+    /*text-decoration: underline;*/
+    cursor: pointer;
+  }
+
+.navbar.navbar-default.navbar-fixed-top(style="background-color:#18181A;")
   .container
     .navbar-header
       button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -30,13 +56,12 @@ style.
     .collapse.navbar-collapse
       ul.nav.navbar-nav.front-header
         li(class=(title == 'Home') ? 'active' : undefined)
-          a(href=`/`) Home
           li(class=(title == 'Popular Uploads') ? 'active' : undefined)
             // category set to overview to trigger overview functionality by default
             if popularDefault == 'all'
               a(href=`/media/popular/1?within=24hour&category=all`) Popular
             else if popularDefault == 'overview'
-              a(href=`/media/popular/1?category=overview&within=1week`) Popular
+              a(href=`/media/popular/1?within=24hour&category=overview`) Popular
           li(class=(title == 'Recent Uploads') ? 'active' : undefined)
             a(href=`/media/recent?category=all`) Recent
           //li(class=(title == 'Channels') ? 'active' : undefined)
@@ -44,6 +69,11 @@ style.
 
         li(class=(title == 'Search') ? 'active' : undefined)
           a(href=`/search`) Search
+        
+        li(class=(title == 'Dark'))
+          a
+            button(onclick="toggleDarkLight()" class="link-button") DARK MODE
+
         li.subscribed-link(class=(title == 'Subscriptions') ? 'active' : undefined)
           if user && user.unseenSubscriptionUploads || user && user.unseenSubscriptionUploads == 0
             a(href=`/media/subscribed`) Subscribed (#{user.unseenSubscriptionUploads})
@@ -91,8 +121,6 @@ style.
                 li
                   a.dropdown-anchors(href=`/admin/dailyStats`) Daily Stats
 
-                li(class=(title == 'Uploads') ? 'active' : undefined)
-                  a.dropdown-anchors(href=`/admin/uploads`) Uploads
                 li(class=(title == 'Users') ? 'active' : undefined)
                   a.dropdown-anchors(href=`/admin/users`) Users
                 li(class=(title == 'Comments') ? 'active' : undefined)
@@ -126,13 +154,15 @@ style.
         else
           // if user logged in
           li(class=(title == 'Upload') ? 'active' : undefined)
-            a(href=`/upload`) Upload
+            a(href=`/upload` class='upload-link') Upload
           li.hidden-md.hidden-lg.hidden-sm
             a(href=`/notifications`) Notifications (#{unreadNotifAmount})
           li.hidden-md.hidden-lg.hidden-sm
             a(href=`/user/` + user.channelUrl) My Channel
           li.hidden-md.hidden-lg.hidden-sm
             a(href=`/account`) My Account
+          li(class=(title == 'Upload') ? 'active' : undefined)
+            a(href=`/upload`) Upload
           li.hidden-md.hidden-lg.hidden-sm
             a(href=`/logout`) Logout
           li.dropdown(class=(title == 'Account Management') ? 'active' : undefined)
@@ -171,3 +201,15 @@ if !user
 
 
     })
+
+if 1==1 
+script.
+  document.getElementById("body").className = localStorage.getItem("darkLight");
+  function toggleDarkLight() {
+    var body = document.getElementById("body");
+    var currentClass = body.className;
+    body.className = currentClass == "dark-mode" ? "light-mode" : "dark-mode";
+    localStorage.setItem('darkLight', body.className);
+  }
+
+
