--- a/views/public/contact.pug
+++ b/views/public/contact.pug
@@ -20,7 +20,7 @@ block content
         textarea.form-control(name='message', id='message', rows='7')
     .form-group
       .col-sm-offset-2.col-sm-8
-        button.btn.btn-primary(type='submit')
+        button.btn.btn-primary(type='submit' style="border:none;")
           i.fa.fa-envelope
           | Send
 
