--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -63,7 +63,7 @@ block content
     //.landingVideo(style="margin-top:0px;padding-top:70px;")
     //  iframe.display-element(src='https://newtube.app/embed/ScMyHdB', frameborder='0', allowfullscreen='' style="width:80%;height:400px;")
 
-    h1.lead-header.fw Introducing #{brandName}
+    h1.lead-header.fw This is <strong>#{brandName}</strong>, the newest way to post your memories.
     h2.tagline-header.fw An open-source YouTube alternative powered by Node.js
     hr
 
@@ -85,7 +85,20 @@ block content
         p.fw in just minutes following our tutorials
 
 
-    .row.second-row
+    //.row.second-row
+      .col-sm-6
+        h2.pitch-header.fw Download For Free &nbsp
+          i.fas.fa-file-download
+        p.explainer.fw We don't think you should pay
+        p.fw for the videos you love.
+      .col-sm-6
+        h2.pitch-header.fw Creator Friendly &nbsp
+          i.fa.fa-users
+        p.explainer.fw We value the creators just as much
+        p.fw as the viewers... unlike others. 
+
+
+    .row.third-row
       .col-sm-4
         h2.pitch-header.fw #{channelAmount} Channels &nbsp
           i.fa.fa-users
