--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -12,11 +12,11 @@ block content
                 input.search-query-input.form-control(style="margin: 0 auto;width:400px;max-width:100%" type='search', name='search', id='search' placeholder=`${searchQuery !== 'undefined' ? searchQuery: ''}`)
                 br
                 div.search-upload-buttons-container
-                    button.fw.search-uploads-button.btn-lg.btn.btn-primary(type='submit' name="type" value="upload")
+                    button.fw.search-uploads-button.btn-lg.btn.btn-primary(type='submit' name="type" value="upload" style="border:none;")
                         //i.fa.fa-lock
                         | Search For Media
 
-                    button.fw.search-users-button.btn-lg.btn.btn-primary(type='submit' name="type" value="user")
+                    button.fw.search-users-button.btn-lg.btn.btn-primary(type='submit' name="type" value="user" style="border:none;")
                         //i.fa.fa-lock
                         | Search For User
 
