--- a/views/socialMedia/createSocialPost.pug
+++ b/views/socialMedia/createSocialPost.pug
@@ -30,7 +30,7 @@ block content
 
             .form-group
                 .col-sm-offset-3.col-sm-7
-                    button.btn.btn-success(type='submit')
+                    button.btn.btn-success(type='submit' style="border:none;")
                         | Create Social Post
 
 
