--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -92,7 +92,7 @@ block content
                 .form-group.center-block.text-center
                   br
                   a.resumable-browse
-                      button.fw.btn.btn-success.resumable-browser(style="font-size:19px;margin-bottom:-9px;border-radius:5px;") Select File
+                      button.fw.btn.btn-success.resumable-browser(style="font-size:19px;margin-bottom:-9px;border:none;") Select File
 
                   h3.fw OR
 
@@ -129,7 +129,7 @@ block content
                   br
 
                   div.dropdown(style="display:inline;padding-right:15px;")
-                    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;font-size:15px;")
+                    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border:none;font-size:15px;")
                       | Category: &nbsp
                       span.caret
 
@@ -202,7 +202,7 @@ block content
                   br
                   textarea.fw.form-group(style="width:400px;max-width:95%;border-radius:4px;font-size:16px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
-                button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Upload
+                button.fw.btn.btn-primary.submit-button(style="border:none;font-size:18px;" type="submit") Upload
 
           div.upload-gif
               h3.fw.upload-title-name Your file is uploading
