--- a/views/viewPartials/categoryDropdown.pug
+++ b/views/viewPartials/categoryDropdown.pug
@@ -1,5 +1,5 @@
-div.search-upload-buttons-container.dropdown(style="display:inline;padding-right:15px;")
-    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
+div.search-upload-buttons-container.dropdown(style="display:inline;padding-right:15px;border:none;")
+    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown'  style="border:none;")
         if category
             | Category: #{categoryObj.displayName} &nbsp
             span.caret
