--- a/views/viewPartials/searchUploadsFileTypeDropdown.pug
+++ b/views/viewPartials/searchUploadsFileTypeDropdown.pug
@@ -1,5 +1,5 @@
-div.dropdown(style="display:inline;padding-right:15px;")
-    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
+div.dropdown(style="display:inline;padding-right:15px;border:none")
+    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border:none;")
         | File Type: #{media.charAt(0).toUpperCase() + media.slice(1)} &nbsp
         span.caret
 
