--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  background-color: #FAFAFA;
+  background-color: transparent !important;
   padding-top: 60px;
   margin-bottom: 75px;
 }
