--- a/views/admin/notifications.pug
+++ b/views/admin/notifications.pug
@@ -20,5 +20,5 @@ block content
 
             .form-group
                 .col-sm-offset-3.col-sm-7
-                    button.btn.btn-success(type='submit')
+                    button.btn.btn-success(type='submit' style="border:none;")
                         | Send Message
