--- a/views/admin/uploads.pug
+++ b/views/admin/uploads.pug
@@ -36,16 +36,16 @@ block content
                             form(action="/pending" method="POST")
                                 input(type='hidden', name='_csrf', value=_csrf)
                                 input(type='hidden', name='uniqueTag', value=`${upload.uniqueTag}`)
-                                button.btn.btn-success(name="moderationValue" value="approve" type="submit") Approve
+                                button.btn.btn-success(name="moderationValue" value="approve" type="submit" style="border:none;") Approve
                                 br
                                 br
-                                button.btn.btn-success(name="moderationValue" value="approveAndTrustUser" type="submit") Approve And Trust User
+                                button.btn.btn-success(name="moderationValue" value="approveAndTrustUser" type="submit" style="border:none;") Approve And Trust User
                                 br
                                 br
-                                button.btn.btn-danger(name="moderationValue" value="banVideo" type="submit" ) Delete Video
+                                button.btn.btn-danger(name="moderationValue" value="banVideo" type="submit" style="border:none;" ) Delete Video
                                 br
                                 br
-                                button.btn.btn-danger(name="moderationValue" value="banVideoAndUser" type="submit") Delete Video And Ban User
+                                button.btn.btn-danger(name="moderationValue" value="banVideoAndUser" type="submit" style="border:none;") Delete Video And Ban User
 
                     else
                         h3 NO UPLOADER?
