--- a/views/moderator/receivedEmail.pug
+++ b/views/moderator/receivedEmail.pug
@@ -24,7 +24,7 @@ block content
             h3 Response:
             textarea.form-group(maxlength='2000' rows="10" cols="70" style="width:400px;" id="response")
             br
-            button.btn.btn-primary.submit-button(type="submit") Send Response For Final Verification
+            button.btn.btn-primary.submit-button(type="submit" style="border:none;") Send Response For Final Verification
 
 
         script(src='/js/lib/jquery-3.1.1.min.js')
