--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -4,6 +4,10 @@ style.
         color: white;
     }
 
+    * {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
     .view-header {
         display: inline;
     }
@@ -140,9 +144,9 @@ style.
         max-height: 381px;
     }
 
-    .body {
-        background-color: #FAFAFA;
-    }
+    /*.body {
+        background-color: white;
+    }*/
 
     .preview-image {
         width: inherit;
