--- a/views/socialMedia/oneOffSocialPost.pug
+++ b/views/socialMedia/oneOffSocialPost.pug
@@ -24,5 +24,5 @@ block content
 
             .form-group
                 .col-sm-offset-3.col-sm-7
-                    button.btn.btn-success(type='submit')
+                    button.btn.btn-success(type='submit' style="border:none;")
                         | Post One Off Social Post
