--- a/views/viewPartials/orderByDropdown.pug
+++ b/views/viewPartials/orderByDropdown.pug
@@ -1,5 +1,5 @@
-div.dropdown(style="display:inline;margin-right:15px;")
-    button.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
+div.dropdown(style="display:inline;margin-right:15px;border:none")
+    button.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border:none;")
         | Order By: #{orderByEnglishString} &nbsp
 
         span.caret
